package utils.data;

import media.IMovie;
import media.ISeries;
import user.IUser;

import java.util.ArrayList;

public class FileIO implements IDataIO {

    public FileIO() {

    }

    @Override
    public ArrayList<IUser> loadUsers() {
        return null;
    }

    @Override
    public ArrayList<IMovie> loadMovies() {
        return null;
    }

    @Override
    public ArrayList<ISeries> loadSeries() {
        return null;
    }
}