package utils.language;

public class LanguageEnglish {
}
